// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Picker with placeholder 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 10,
          "paddingHorizontal": 5,
        },
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;

exports[`renders colored Picker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 10,
          "paddingHorizontal": 5,
        },
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;

exports[`renders custom styled Picker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "black",
          "borderRadius": "3",
          "borderWidth": 1,
        },
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;

exports[`renders regular Picker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 10,
          "paddingHorizontal": 5,
        },
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;

exports[`renders rounded Picker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "rgba(33, 33, 33, 0.5)",
          "borderWidth": 0.9,
        },
        Object {
          "borderRadius": 10,
          "paddingHorizontal": 5,
        },
        Object {
          "borderRadius": 22.5,
          "paddingHorizontal": 10,
        },
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;

exports[`renders underlined Picker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        Object {
          "borderBottomColor": "rgba(33, 33, 33, 0.5)",
          "borderBottomWidth": 0.9,
        },
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;

exports[`renders unstyled Picker 1`] = `
<View
  style={
    Object {
      "marginBottom": 5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 45,
          "marginBottom": 5,
          "marginTop": 10,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Picker
      mode="dropdown"
      onValueChange={[Function]}
      style={
        Object {
          "height": 45,
        }
      }
    >
      <Item
        label="1"
        value="1"
      />
      <Item
        label="2"
        value="2"
      />
      <Item
        label="3"
        value="3"
      />
    </Picker>
  </View>
</View>
`;
